--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.10.2",
     "@electron-forge/plugin-fuses": "^7.10.2",
     "@electron/fuses": "^1.8.0",
-    "electron": "38.3.0"
+    "electron": "38.3.0",
+    "sass": "^1.93.2"
   }
 }
